added submission, updated makefile

--- a/code/reception/src/makefile
+++ b/code/reception/src/makefile
@@ -25,7 +25,8 @@ CLASSES = \
 	Reservation.java \
 	Room.java \
 	RoomType.java \
-	Utils.java
+	Utils.java \
+	ListenerCloseWindow.java
 
 default: classes
 
