--- a/code/rendu/statistiques/makefile
+++ b/code/rendu/statistiques/makefile
@@ -10,8 +10,7 @@ CLASSES = \
 	Fenetre.java \
 	MenuActionListener.java \
 	MenuDeroulant.java \
-	Statistiques.java \
-	CheckActionListener.java
+	Statistiques.java
 
 
 default: classes
